# wallet

./: .env_example  .flake8  .gitattributes  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  conftest.py  database.py  exceptions.py  main.py
app/migrations/: env.py
app/migrations/versions/: 6fdd299e7077_create_users_table.py  e3b858699af5_create_wallets_table.py
app/service/: base.py
app/tests/integration_tests/users_tests/: tests_api_users.py
app/tests/integration_tests/wallets_tests/: test_api_wallets.py
app/tests/mok_files/: mock_users.json  mock_wallets.json
app/tests/unit_tests/users_tests/: test_user_service.py
app/users/: auth.py  dependencies.py  models.py  router.py  service.py  shemas.py
app/wallet/: models.py  router.py  service.py  shemas.py
docker/: app.sh
