[tool.poetry]
name = "wallet"
version = "0.1.0"
description = "Wallet API client"
authors = ["Nikit <nikita_filinkov@mail.ru>"]
readme = "README.md"
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
force-exclude = '''
app/tests/integration_tests/wallets_tests/test_api_wallets\.py
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "venv",
  "build",
  "dist",
  ".mypy_cache",
  ".pytest_cache"
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
  "venv",
  ".venv",
  "build",
  ".mypy_cache",
  ".pytest_cache"
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app  --cov-report=term-missing --cov-report=html --asyncio-mode=strict"
asyncio_mode = "strict"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.128.0"}
sqlalchemy = "^2.0.45"
asyncpg = "^0.31.0"
alembic = "^1.18.0"
aiohttp = "^3.13.3"
python-dotenv = "^1.0.0"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
bcrypt = "^5.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0"
flake8 = "^6.0"
isort = "^5.12"
mypy = "^1.0"
pytest = "^8.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^4.0"
pre-commit = "^3.0"
asgi-lifespan = "^2.1.0"
